dnl Process this file with autoconf to produce a configure script.
AC_INIT(src/dircproxy.h)
AM_INIT_AUTOMAKE(dircproxy, 0.7.4)
AM_CONFIG_HEADER(config.h)
AC_CANONICAL_HOST

dnl Checks for programs.
AC_PROG_AWK
AC_PROG_CC
AC_ISC_POSIX
AM_PROG_CC_STDC
AC_PROG_INSTALL
AC_PROG_LN_S
AC_PROG_MAKE_SET

dnl Checks for libraries.

dnl Checks for header files.
AC_HEADER_STDC
AC_CHECK_HEADERS(crypt.h fcntl.h sys/time.h syslog.h unistd.h)

dnl Checks for typedefs, structures, and compiler characteristics.
AC_C_CONST
AC_TYPE_SIZE_T
AC_HEADER_TIME

dnl Checks for library functions.
AC_FUNC_ALLOCA
AC_TYPE_SIGNAL
AC_CHECK_FUNCS(mkdir rmdir select strcspn strerror strspn)
AC_CHECK_FUNC(socket, , AC_CHECK_LIB(socket, socket, ,
	AC_MSG_WARN([couldn't find your socket() function])))
AC_CHECK_FUNC(gethostbyname, , AC_CHECK_LIB(nsl, gethostbyname, ,
	AC_MSG_WARN([couldn't find your gethostbyname() function])))
AC_CHECK_FUNC(crypt, , AC_CHECK_LIB(crypt, crypt, ,
	AC_MSG_WARN([couldn't find your crypt() function])))

dnl Do strange debug stuff.
AC_ARG_ENABLE(debug, [  --enable-debug          turn on debugging [default=no]],if eval "test x$enable_debug = xyes"; then
	CFLAGS="-g -Wall $CFLAGS"
	AC_DEFINE(DEBUG)
	AC_DEFINE(DEBUG_MEMORY)
else
	AC_CHECK_FUNCS(strdup vasprintf vsnprintf)
fi,
AC_CHECK_FUNCS(strdup vasprintf vsnprintf)
)

dnl Output the Makefiles.
AC_OUTPUT([Makefile conf/Makefile contrib/Makefile doc/Makefile src/Makefile])
