## Process this file with automake to produce Makefile.in

INCLUDES = \
	-DSYSCONFDIR="\"${sysconfdir}\""

bin_PROGRAMS = \
	dircproxy

dircproxy_SOURCES = \
	main.c \
	dircproxy.h \
	irc_net.c irc_net.h \
	irc_client.c irc_client.h logo.h help.h \
	irc_server.c irc_server.h \
	irc_prot.c irc_prot.h \
	irc_log.c irc_log.h \
	irc_string.c irc_string.h \
	timers.c timers.h \
	cfgfile.c cfgfile.h \
	dns.c dns.h \
	net.c net.h \
	match.c match.h \
	stringex.c stringex.h \
	sprintf.c sprintf.h \
	memdebug.c memdebug.h \
	getopt.c getopt.h getopt1.c
